chore: bump version, add AI agent discovery keywords

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@purpleflea/casino-mcp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "MCP server for AI agent casino — provably fair gambling with 0.5% house edge. Coin flip, dice, roulette, crash, custom odds. Kelly Criterion bankroll protection. By Purple Flea.",
   "type": "module",
   "main": "dist/index.js",
@@ -12,21 +12,28 @@
     "README.md"
   ],
   "keywords": [
-    "mcp",
-    "mcp-server",
-    "model-context-protocol",
-    "ai-agent",
-    "casino",
-    "gambling",
-    "provably-fair",
-    "crypto",
     "claude",
-    "openai",
-    "purple-flea",
-    "kelly-criterion",
+    "coin-flip",
+    "ai-agent",
     "dice",
+    "mcp-server",
+    "casino",
+    "provably-fair",
+    "purple-flea",
+    "web3",
+    "crewai",
+    "purpleflea",
+    "agent-economy",
+    "openai",
+    "mcp",
+    "model-context-protocol",
     "roulette",
-    "coin-flip"
+    "autonomous-agent",
+    "llm",
+    "langchain",
+    "kelly-criterion",
+    "gambling",
+    "crypto"
   ],
   "author": "Purple Flea",
   "license": "MIT",
